@@ -1,5 +1,7 @@
 *SVN*
 
+* Make assert_select's failure messages clearer about what failed. #7779 [dchelimsky]
+
 * Introduce a default respond_to block for custom types.  #8174 [Josh Peek]
 
 * auto_complete_field takes a :method option so you can GET or POST.  #8120 [zapnap]
